# algolia-monitoring-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic_example.rs
src/: lib.rs
