[package]
name = "algolia-monitoring-rs"
version = "0.1.0"
edition = "2021"
description = "A library for interacting with the Algolia Monitoring API"
authors = ["Sardorbek Pulatov <sardo@hey.com>"]

[lib]
name = "algolia_monitoring_rs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic_example"
crate-type = ["bin"]
